nginx-config-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-configmap-pod
spec:
  containers:
  - name: nginx-configmap
    image: nginx:alpine
    volumeMounts:
    - name: config
      path: /etc/nginx/conf.d/
    volumes:
    - name: config
      configMap:
        name: fortune-config
    livenessProbe:
      httpGet:
        path: /
        port: 80
    readinessProbe:
      httpGet:
        path: /
        port: 80
