requests-pod.yaml
apiVersion: v1
kind: apiVersion: v1
kind: Pod
metadata:
  name: requests-pod
spec:
  containers:
  - name: main
    image: busybox
    command: ["dd","if=/dev/zero", "of=/dev/null"]
    resources:
      requests:
        memory: "100Mi"
        cpu: "200m"
