networking-policy-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-netpolicy
spec:
  podSelector:
    app: database
  ingress:
  - from:
    podSelector:
      matchLabels:
        app: webserver
    ports:
    - port: 5432
